objects/WorkType.object
<CustomObject>
    <fields>
        <fullName>TestField__c</fullName>
        <label>TestField</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>work_type_number__c</fullName>
        <label>work type number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>worktypetextarea__c</fullName>
        <label>worktypetextarea</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_WorkTypes</fullName>
        <filterScope>Everything</filterScope>
        <label>All Work Types</label>
    </listViews>
    <listViews>
        <fullName>My_WorkTypes</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Types</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>